fixed alignment on home page

--- a/static/css/stylesheet.css
+++ b/static/css/stylesheet.css
@@ -415,13 +415,20 @@ h1 {
   padding: 30px 0px;
   color: black;
   font-weight: lighter;
-
-
 }
 
 header {
   clear: both;
   width: 100%;
+}
+
+main {
+  clear: both;
+  width: 100%;
+}
+
+main a:hover {
+  text-decoration: none;
 }
 
 #logobar {
